--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "lucide-react": "^0.575.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-markdown": "^10.1.0",
     "react-router-dom": "^7.13.0",
-    "recharts": "^3.7.0"
+    "recharts": "^3.7.0",
+    "react-helmet-async": "^1.4.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
