--- a/package.json
+++ b/package.json
@@ -13,14 +13,16 @@
     "firebase": "^12.9.0",
     "firestore": "^1.1.6",
     "html2canvas": "^1.4.1",
+    "html2pdf.js": "^0.14.0",
     "jspdf": "^4.2.0",
     "lucide-react": "^0.575.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-helmet-async": "*",
+    "react-is": "*",
     "react-markdown": "^10.1.0",
     "react-router-dom": "^7.13.0",
-    "recharts": "^3.7.0",
-    "react-helmet-async": "^1.4.0"
+    "recharts": "^3.7.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
